--- a/products/peluches/index.html
+++ b/products/peluches/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peluches Japoneses - Hola Japón</title>
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -67,7 +66,7 @@
                         <div class="product-info">
                             <h3>Monchhichi Clásico</h3>
                             <div class="product-price">$599.00 MXN</div>
-                            <a href="monchhichi.html" class="btn">Ver Detalles</a>
+                            <a href="../product-detail.html?id=monchhichi" class="btn">Ver Detalles</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -75,7 +74,7 @@
                         <div class="product-info">
                             <h3>POPMART Labubu - Edición Limitada</h3>
                             <div class="product-price">$899.00 MXN</div>
-                            <a href="labubu.html" class="btn">Ver Detalles</a>
+                            <a href="../product-detail.html?id=labubu" class="btn">Ver Detalles</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -83,7 +82,7 @@
                         <div class="product-info">
                             <h3>Peluche Totoro Grande</h3>
                             <div class="product-price">$799.00 MXN</div>
-                            <a href="totoro.html" class="btn">Ver Detalles</a>
+                            <a href="../product-detail.html?id=totoro" class="btn">Ver Detalles</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -91,7 +90,7 @@
                         <div class="product-info">
                             <h3>Rilakkuma - Oso Relajado</h3>
                             <div class="product-price">$649.00 MXN</div>
-                            <a href="rilakkuma.html" class="btn">Ver Detalles</a>
+                            <a href="../product-detail.html?id=rilakkuma" class="btn">Ver Detalles</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -99,7 +98,7 @@
                         <div class="product-info">
                             <h3>Sumikko Gurashi - Set de 3</h3>
                             <div class="product-price">$1,299.00 MXN</div>
-                            <a href="sumikko.html" class="btn">Ver Detalles</a>
+                            <a href="../product-detail.html?id=sumikko" class="btn">Ver Detalles</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -107,7 +106,7 @@
                         <div class="product-info">
                             <h3>Pokémon - Pikachu Grande</h3>
                             <div class="product-price">$899.00 MXN</div>
-                            <a href="pokemon.html" class="btn">Ver Detalles</a>
+                            <a href="../product-detail.html?id=pokemon" class="btn">Ver Detalles</a>
                         </div>
                     </div>
                 </div>
