--- a/testimonials.html
+++ b/testimonials.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonios - Hola Japón</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <script src="js/components.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="js/app.js" defer></script>
+    <script src="js/search.js" defer></script>
+    <script src="js/cart.js" defer></script>
+    <script src="js/breadcrumb.js" defer></script>
+    <script src="js/accessibility.js" defer></script>
     <script src="js/testimonials.js" defer></script>
     <script src="js/translate.js" defer></script>
 </head>
 <body>
     <!-- 言語切り替えボタン -->
     <div class="language-toggle">
-        <button class="lang-btn active" data-lang="es">ES</button>
-        <button class="lang-btn" data-lang="ja">日本語</button>
+        <button type="button" class="lang-btn active" data-lang="es">ES</button>
+        <button type="button" class="lang-btn" data-lang="ja">日本語</button>
     </div>
 
     <!-- ヘッダーコンポーネント -->
