--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,7 @@
         </section>
 
         <!-- FAQセクション -->
-        <section class="quick-faq">
+        <section class="quick-faq" id="faq">
             <div class="container">
                 <h2>
                     <span class="es-text">Preguntas Más Comunes</span>
